[workspace]
resolver = "2"
members = [
    "iceoryx2-bb/lock-free/",
    "iceoryx2-bb/threadsafe/",
    "iceoryx2-bb/container",
    "iceoryx2-bb/derive-macros",
    "iceoryx2-bb/elementary",
    "iceoryx2-bb/log",
    "iceoryx2-bb/memory",
    "iceoryx2-bb/posix",
    "iceoryx2-bb/system-types",
    "iceoryx2-bb/testing",
    "iceoryx2-bb/trait-tests",

    "iceoryx2-lang/c",

    "iceoryx2-cal",
    "iceoryx2",
    "iceoryx2-pal/concurrency-sync",
    "iceoryx2-pal/posix/",
    "iceoryx2-pal/configuration/",

    "examples",

    "benchmarks/publish-subscribe",
    "benchmarks/event"
]

[workspace.package]
categories = ["network-programming"]
description = "iceoryx2: Lock-Free Zero-Copy Interprocess Communication"
edition = "2021"
homepage = "https://iceoryx.io"
keywords = ["zero-copy", "communication", "ipc", "inter-process", "publish-subscribe", "request-response", "shmem", "shared-memory", "shared_memory", "shared"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/eclipse-iceoryx/iceoryx2"
rust-version = "1.75"
version = "0.3.0"

[workspace.dependencies]
iceoryx2-bb-threadsafe = { version = "0.3.0", path = "iceoryx2-bb/threadsafe/" }
iceoryx2-bb-lock-free = { version = "0.3.0", path = "iceoryx2-bb/lock-free/" }
iceoryx2-bb-container = { version = "0.3.0", path = "iceoryx2-bb/container/" }
iceoryx2-bb-derive-macros = { version = "0.3.0", path = "iceoryx2-bb/derive-macros/" }
iceoryx2-bb-elementary = { version = "0.3.0", path = "iceoryx2-bb/elementary/" }
iceoryx2-bb-log = { version = "0.3.0", path = "iceoryx2-bb/log/" }
iceoryx2-bb-memory = { version = "0.3.0", path = "iceoryx2-bb/memory/" }
iceoryx2-bb-posix = { version = "0.3.0", path = "iceoryx2-bb/posix/" }
iceoryx2-bb-system-types = { version = "0.3.0", path = "iceoryx2-bb/system-types/" }
iceoryx2-bb-trait-tests = { version = "0.3.0", path = "iceoryx2-bb/trait-tests/" }
iceoryx2-bb-testing = { version = "0.3.0", path = "iceoryx2-bb/testing/" }

iceoryx2-pal-concurrency-sync = { version = "0.3.0", path = "iceoryx2-pal/concurrency-sync/" }
iceoryx2-pal-posix = { version = "0.3.0", path = "iceoryx2-pal/posix/" }
iceoryx2-pal-configuration = { version = "0.3.0", path = "iceoryx2-pal/configuration/" }

iceoryx2-cal = { version = "0.3.0", path = "iceoryx2-cal" }

iceoryx2-lang-c = { version = "0.3.0", path = "iceoryx2-lang-c" }

iceoryx2 = { version = "0.3.0", path = "iceoryx2/" }

bindgen = { version = "0.69.4" }
bitflags = { version = "2.5.0" }
cbindgen = { version = "0.26.0" }
cc = { version = "1.0.98" }
cdr = { version = "0.2.4" }
clap = { version = "4.5.4", features = ["derive"] }
enum-iterator = { version = "2.1.0" }
generic-tests = { version = "0.1.2" }
lazy_static = { version = "1.4.0" }
log = { version = "0.4.21" }
once_cell = { version = "1.19.0" }
ouroboros = { version = "0.18.4" }
pin-init = { version = "0.2.0" }
proc-macro2 = { version = "1.0.84" }
quote = { version = "1.0.36" }
serde = { version = "1.0.203", features = ["derive"] }
sha1_smol = { version = "1.0.0" }
syn = { version = "2.0.66", features = ["full"] }
termsize = { version = "0.1.6" }
tiny-fn = { version = "0.1.5" }
toml = { version = "0.8.13" }
tracing = { version = "0.1.40" }
windows-sys = { version = "0.48.0", features = ["Win32_Security", "Win32_Security_Authorization", "Win32_System_Memory", "Win32_System_Threading", "Win32_Foundation", "Win32_System_WindowsProgramming", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Diagnostics_Debug", "Win32_System_SystemInformation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Console", "Win32_Networking_WinSock",
"Win32_System_SystemServices"] }

[profile.release]
strip = true
lto = true
# opt-level = "z"
panic = "abort"
